# ryujin-cli

./: .gitlab-ci.yml  Cargo.toml  README.md
conf/: conf.json
services/: services.json
services/apache/: Dockerfile
services/apache/conf/: httpd-ssl.conf  httpd.conf  ryujin.conf
services/nginx/: Dockerfile  ryujin.conf
services/pwn/: Dockerfile
services/react_nginx/: Dockerfile
services/templates/compose/: template-apache.yml  template-docker-compose.yml  template-nginx.yml  template-php-apache.yml  template-portainer.yml  template-pwn.yml  template-react-nginx.yml
services/templates/readme/: readme-template-readme.md
services/templates/readme/partials/: apache-configuration.md  apache-information.md  nginx-configuration.md  nginx-information.md  php-apache-configuration.md  php-apache-information.md  portainer-configuration.md  portainer-information.md  pwn-configuration.md  pwn-information.md  react-nginx-configuration.md  react-nginx-information.md
src/: catalog.rs  compose.rs  main.rs  select.rs  service.rs
